# monograms-retrieval

./: .gitignore  README.md  build_indices.py  build_indices_demo.py  build_indices_testsets.py  demo.ipynb  export_wandb_results.py  main.py  pyproject.toml  requirements.txt  run_build_indices.slurm  run_evaluation.slurm  run_patch_visualization.slurm  run_training.slurm  run_visualization.slurm  run_wandb_export.slurm
archive/: visualization_w_images.py
configs/: training.yaml  training_generalization.yaml  training_stratified.yaml  visualizing.yaml
configs/data/: default.yaml  generalization.yaml  stratified.yaml
configs/loss/: clip.yaml
configs/model/: default.yaml  default.yml  dino.yaml
configs/test/: default.yaml
configs/train/: default.yaml
scripts/: ablation_plots.py  analyze_rerankability.py  create_splits.py  demo.py  demo_retrieval.py  export_generalization_results.py  export_strict_generalization_results.py  export_wandb_reranking_results.py  export_wandb_results.py  preprocess_seal_edges.py  viz_patch_similarity.py
splits/fold_0/: test.txt  train.txt
splits/fold_1/: test.txt  train.txt
splits/fold_2/: test.txt  train.txt
splits/fold_3/: test.txt  train.txt
splits/fold_4/: test.txt  train.txt
splits/generalization/: all_splits.csv  stats.txt  test_easy_q0q1.csv  test_gallery.csv  test_hard_q3.csv  test_medium_q2.csv  train.csv  val.csv
src/: create_splits.py  dataset.py  evaluation.py  losses.py  models.py  reranker.py  train.py  train_full_dataset.py  utils.py  visualization.py  visualization_w_images.py
(+29 files in other folders)
