[project]
name = "cross-modal-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "ipython>=8.38.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "plotly>=6.6.0",
    "python-math>=0.0.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "umap-learn>=0.5.11",
    "wandb>=0.25.1",
]
